fix wrong margin on RTL languages

--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -33,7 +33,6 @@
     width: 20px;
     height: 20px;
     display: inline-block;
-    margin-right: 10px;
     border-radius: var(--tblr-border-radius);
 }
 
